Fixes spacing errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,88 +3,88 @@ h1,h2,h3 {
 }
 
 .container {
-    text-align: center;
-    margin: auto;
+  text-align: center;
+  margin: auto;
 }
 .gameTable { 
-    padding: 0px;
-    border-collapse: separate;
-    background-color: #fff;
-    margin: 0 auto;
+  padding: 0px;
+  border-collapse: separate;
+  background-color: #fff;
+  margin: 0 auto;
 }
 .gameTable td { 
-    width: 40px; 
-    height: 40px; 
-    background-color: #ddd;
-    margin: 0px;
-    padding: 0px;
-    border-bottom: #aaa solid 4px;
-    border-left: #aaa solid 4px;
-    border-top: #eee solid 4px; 
-    border-right: #eee solid 4px;
+  width: 40px; 
+  height: 40px; 
+  background-color: #ddd;
+  margin: 0px;
+  padding: 0px;
+  border-bottom: #aaa solid 4px;
+  border-left: #aaa solid 4px;
+  border-top: #eee solid 4px; 
+  border-right: #eee solid 4px;
 }
 
 .gameTable td:hover {
-    background-color: #999;
-    cursor: pointer;
+  background-color: #999;
+  cursor: pointer;
 }
 
 .gameTable td.selected {
-    background-color: #eee;
-    border: 4px solid #eee;
+  background-color: #eee;
+  border: 4px solid #eee;
 }
 
 .gameTable td.selected:hover {
-    background-color: #eee;
-    cursor: default;
+  background-color: #eee;
+  cursor: default;
 }
 
 .gameTable td.mine {
-    background-color: #f77;
-    border: 4px solid #855;
-    cursor: default;
+  background-color: #f77;
+  border: 4px solid #855;
+  cursor: default;
 }
 
 .gameTable div.cellNum {
-    text-align: center;
-    font-family: arial, verdana;
-    font-size: 18px;
-    font-weight: bold;
+  text-align: center;
+  font-family: arial, verdana;
+  font-size: 19px;
+  font-weight: bold;
 }
 
 .gameTable div.cellMine {
-    color: #f00;
+  color: #f00;
 }
 
 div.lost, div.won {
-    margin:0 auto;
-    text-align: center;
-    margin-top: 10px;
-    width: 20%
+  margin:0 auto;
+  text-align: center;
+  margin-top: 10px;
+  width: 20%
 }
 
 
 div.show-mines, div.hide-mines, div.win-check {
-    background-image: url("../assets/noun_96705.png");
-    height: 50px;
-    width: 30px;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    margin: 0 auto;
-    margin-top: 20px;
+  background-image: url("../assets/noun_96705.png");
+  height: 50px;
+  width: 30px;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 div.show-mines {
-    background-image: url("../assets/noun_96705.png");
+  background-image: url("../assets/noun_96705.png");
 }
 
 div.hide-mines {
-    background-image: url("../assets/noun_96481.png");
+  background-image: url("../assets/noun_96481.png");
 }
 
 div.win-check {
-    background-image: url("../assets/noun_11542.png");
-    width: 50px;
+  background-image: url("../assets/noun_11542.png");
+  width: 50px;
 }
 
 div.hide-mines:hover, div.show-mines:hover, div.lost:hover, div.won:hover, div.win-check:hover{
